<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context=".helpers.Settings">


    <TextView
        android:id="@+id/res_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/postavke"
        android:textColor="?attr/textcolor"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/res_datetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/Jezik"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/changeMyLang"
        app:layout_constraintTop_toBottomOf="@+id/notification" />

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/blue_border"
        android:text="@string/Odaberi_jezik"
        android:textColor="?attr/backgroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setnotification" />


    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/obavijest"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/setnotification"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setnotification"
        android:layout_width="120dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="140dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/blue_border"
        android:text="@string/postavi_obavijest"
        android:textColor="?attr/backgroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="72dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/o_nama"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/aboutus"
        app:layout_constraintTop_toBottomOf="@+id/contacttext" />

    <Button
        android:id="@+id/aboutus"

        android:layout_width="120dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/blue_border"
        android:text="@string/info"
        android:textColor="?attr/backgroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />


    <TextView
        android:id="@+id/contacttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/kontakt"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/res_datetext" />

    <Button
        android:id="@+id/contact"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="@drawable/blue_border"
        android:text="@string/info"
        android:textColor="?attr/backgroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeMyLang" />

    <Button
        android:id="@+id/canclealarm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="140dp"


        android:background="@drawable/custom_button"
        android:text="X"
        android:textColor="?attr/backgroundcolor"
        app:layout_constraintStart_toEndOf="@+id/setnotification"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/myswitch"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:switchPadding="15dp"


        android:text="@string/nocni_nacin"
        android:textColor="?attr/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutus" />


</androidx.constraintlayout.widget.ConstraintLayout>
