<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.TabActivity">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Tab"
        android:layout_marginBottom="8dp"/>


    <TextView
        android:id="@+id/Swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Swipe"
        android:textColor="#123"
        android:contentDescription="@string/app_name"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@id/Tab"
        android:textAlignment="textEnd"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/Tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        app:tabBackground="@drawable/circle_holder">

    </com.google.android.material.tabs.TabLayout>


    <RelativeLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp">

        <Button
            android:id="@+id/Start"
            android:layout_width="132dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:text="@string/Get"
            android:textColor="#FFFFFF"
            android:visibility="invisible"/>




    </RelativeLayout>



</RelativeLayout>